--- a/src/app/pages/flights/flights.component.html
+++ b/src/app/pages/flights/flights.component.html
@@ -1,16 +1,36 @@
 <div class="">
-  <div class="content" fxLayout="row wrap" fxLayoutGap="16px">
-    <mat-card class="matcard" fxFlex="30%" *ngFor="let flight of flights">
-        <mat-card-header class="header">
-          <mat-card-title class="title">Vol numéro {{ flight.id }}</mat-card-title>
+    <div class="company" *ngFor="let company of companies">
+      <h2>{{ company.name }}</h2>
+      <div class="content" fxLayout="row wrap" fxLayoutGap="16px">
+        <app-table [data]="company.flights"></app-table>
+        <!--<table *ngIf="company.flights" mat-table [dataSource]="company.flights" class="mat-elevation-z8">
+          <!-- ID -->
+          <!--<ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let flight"> {{ flight.id }} </td>
+          </ng-container>
 
-        </mat-card-header>
-        <mat-card-content>
-          <p>Date : {{ flight.date }}</p>
-        </mat-card-content>
-      <!--  <mat-card-actions>
-          <button mat-button class="button" [disabled]="estDispo(place)" (click)="addToCart(place)">ACHETER</button>
-        </mat-card-actions>-->
-    </mat-card>
-  </div>
+          <!-- Departure -->
+          <!--<ng-container matColumnDef="departure">
+            <th mat-header-cell *matHeaderCellDef> Departure </th>
+            <td mat-cell *matCellDef="let flight"> {{ flight.departure }} </td>
+          </ng-container>
+
+          <!-- Destination -->
+          <!--<ng-container matColumnDef="destination">
+            <th mat-header-cell *matHeaderCellDef> Destination </th>
+            <td mat-cell *matCellDef="let flight"> {{ flight.destination }} </td>
+          </ng-container>
+
+          <!-- Date -->
+          <!--<ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let flight"> {{ flight.date }} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>-->
+      </div>
+    </div>
 </div>
