--- a/src/app/components/toolbar-menu/toolbar-menu.component.html
+++ b/src/app/components/toolbar-menu/toolbar-menu.component.html
@@ -1,7 +1,7 @@
 <!-- toolbar for menu -->
 <mat-toolbar class="toolbar">
   <mat-toolbar-row class="row">
-    <a mat-list-item routerLink="/">Home</a>
+    <a mat-list-item routerLink="/flights">Flights</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <!-- Content of page that have been routed on a link -->
