--- a/src/app/pages/flights/flights.component.html
+++ b/src/app/pages/flights/flights.component.html
@@ -1,8 +1,15 @@
-<div class="">
-    <div class="company" *ngFor="let company of companies">
-      <h2>{{ company.name }}</h2>
-      <div class="content" fxLayout="row wrap" fxLayoutGap="16px">
-        <app-table [data]="company.flights"></app-table>
-      </div>
+<div class="page">
+  <div class="company">
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a company</mat-label>
+      <mat-select [disabled]="disableSelect.value">
+        <mat-option value="{{ company.name }}" *ngFor="let company of companies" (click)="setSelectedCompany(company)"> {{ company.name }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="flights" *ngIf="selectedCompany">
+    <div class="content" fxLayout="row wrap" fxLayoutGap="16px">
+      <app-table [data]="selectedCompany.flights"></app-table>
     </div>
+  </div>
 </div>
